<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
	
	<data>
		
		<import type="android.view.View.OnClickListener"/>
		
		<variable
			name="confirmClickListener"
			type="OnClickListener"/>
	</data>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		android:padding="10dp">
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:text="@string/load_mode"
			android:textColor="#333333"/>
		
		<RadioGroup
			android:id="@+id/rgStatusMode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checkedButton="@+id/rbAuto">
			
			<RadioButton
				android:id="@+id/rbAuto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/auto"/>
			
			<RadioButton
				android:id="@+id/rbShow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/show"/>
			
			<RadioButton
				android:id="@+id/rbHide"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/hide"/>
		</RadioGroup>
		
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">
			
			<android.support.design.widget.TextInputEditText
				android:id="@+id/etListCount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/please_enter_the_number_of_data"
				android:inputType="numberSigned"
				android:text="@string/the_default_number_of_data"
				android:textSize="16sp"/>
		</android.support.design.widget.TextInputLayout>
		
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<android.support.design.widget.TextInputEditText
				android:id="@+id/etPageCount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/please_enter_the_number_of_page"
				android:inputType="numberSigned"
				android:text="@string/the_default_number_of_page"
				android:textSize="16sp"/>
		</android.support.design.widget.TextInputLayout>
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginEnd="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:background="?selectableItemBackground"
			android:onClick="@{confirmClickListener}"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:paddingTop="10dp"
			android:text="@string/confirm"
			android:textColor="#333333"/>
	</LinearLayout>
</layout>
